--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,14 +1,6 @@
 use_frameworks!
+inhibit_all_warnings!
 
 target 'RxPermission_Example' do
   pod 'RxPermission/Location', :path => '../'
-end
-
-post_install do |installer|
-    installer.pods_project.targets.each do |target|
-        target.build_configurations.each do |config|
-              config.build_settings['ENABLE_TESTABILITY'] = 'YES'
-              config.build_settings['SWIFT_VERSION'] = '3.0'
-        end
-    end
 end
